finished adding Notes, currently creating a new Note Uses HardCoded values, hence all notes are identical Still cant figure out why  for when a card is clicked does not work, its the key to dynamic notes need to refresh to show added note, scrape works

--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@ body{
 }
 
 .MyCard{
+    display:inline-block;
     margin: 15px;
     width: 400px;
     background-color: aquamarine;
@@ -34,11 +35,7 @@ body{
 }
 
 .MyCard-ContentDiv{
-    padding: 5px 2px;
+    padding: 5px 15px;
     word-wrap: break-word;
     background-color: orange;
-}
-
-.MyCard-Content{
-
 }
